Hover contrast fix for navbar.

--- a/_assets/stylesheets/_navigation.scss
+++ b/_assets/stylesheets/_navigation.scss
@@ -108,7 +108,7 @@
       &:hover {
         border-bottom: 3px solid transparentize($action-colour, .3);
 
-        color: $nav-link-colour;
+        color: $white;
       }
 
       &.is-current {
